--- a/turingbench_python_cuda/mandelbrot_gpu/mandelbot_gpu.ipynb
+++ b/turingbench_python_cuda/mandelbrot_gpu/mandelbot_gpu.ipynb
@@ -80,6 +80,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing jade_sub.sh\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile jade_sub.sh\n",
+    "#!/bin/bash\n",
+    "\n",
+    "# set the number of nodes\n",
+    "#SBATCH --nodes=1\n",
+    "\n",
+    "# set max wallclock time\n",
+    "#SBATCH --time=10:00:00\n",
+    "\n",
+    "# set name of job\n",
+    "#SBATCH --job-name=echalstrey_singularity_cuda_test1\n",
+    "\n",
+    "# set number of GPUs\n",
+    "#SBATCH --gres=gpu:4\n",
+    "\n",
+    "# mail alert at start, end and abortion of execution\n",
+    "#SBATCH --mail-type=ALL\n",
+    "\n",
+    "# send mail to this address\n",
+    "#SBATCH --mail-user=echalstrey@turing.ac.uk\n",
+    "\n",
+    "# run the application\n",
+    "module load singularity\n",
+    "singularity build mandelbrot_gpu.sif mandelbrot_gpu.def\n",
+    "singularity run --nv mandelbrot_gpu.sif"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,7 +148,7 @@
     "| Azure (Nvidia K80)  | Docker  | 5.369710  |\n",
     "| Azure (Nvidia K80)  | Singularity 3.2  | 5.734466  |\n",
     "| CSD3 (Nvidia V100)  | Singularity  |   |\n",
-    "| JADE (Nvidia P100)  | Singularity  |   |"
+    "| JADE (Nvidia P100)  | Singularity 2.4 |   |"
    ]
   }
  ],
