--- a/turingbench_python_cuda/mandelbrot_gpu/mandelbot_gpu.ipynb
+++ b/turingbench_python_cuda/mandelbrot_gpu/mandelbot_gpu.ipynb
@@ -56,19 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting mandelbrot_gpu.def\n"
+      "Overwriting Singularity.mandelbrot_gpu\n"
      ]
     }
    ],
    "source": [
-    "%%writefile mandelbrot_gpu.def\n",
+    "%%writefile Singularity.mandelbrot_gpu\n",
     "BootStrap: docker \n",
     "From: edwardchalstrey/mandelbrot_gpu\n",
     "\n",
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing jade_sub.sh\n"
+      "Overwriting jade_sub.sh\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
     "#SBATCH --nodes=1\n",
     "\n",
     "# set max wallclock time\n",
-    "#SBATCH --time=10:00:00\n",
+    "#SBATCH --time=00:30:00\n",
     "\n",
     "# set name of job\n",
     "#SBATCH --job-name=echalstrey_singularity_cuda_test1\n",
@@ -116,8 +116,7 @@
     "\n",
     "# run the application\n",
     "module load singularity\n",
-    "singularity build mandelbrot_gpu.sif mandelbrot_gpu.def\n",
-    "singularity run --nv mandelbrot_gpu.sif"
+    "singularity run --nv -B /tmp:/tmp shub://singularity-hub.org/edwardchalstrey1/turingbench:mandelbrot_gpu"
    ]
   },
   {
@@ -133,10 +132,14 @@
     "\n",
     "Singularity Commands to build from the Docker Hub image and run:\n",
     "\n",
-    "1. ```singularity build mandelbrot_gpu.sif mandelbrot_gpu.def```\n",
+    "1. ```singularity build mandelbrot_gpu.sif Singularity.mandelbrot_gpu```\n",
     "2. ```singularity run --nv mandelbrot_gpu.sif```\n",
     "\n",
-    "*Note, building singularity images appear to take up a lot of storage and might be difficult on Azure VMs with the default 30GB*"
+    "*Note, building singularity images appear to take up a lot of storage and might be difficult on Azure VMs with the default 30GB*\n",
+    "\n",
+    "I have also built with Singularity Hub from the turingbench repo, so can be run from there:\n",
+    "\n",
+    "```singularity run shub://singularity-hub.org/edwardchalstrey1/turingbench:mandelbrot_gpu```"
    ]
   },
   {
